# clinbox

./: package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  data_routes.py  dspy_routes.py  dspy_signatures.py
backend/backend_simulation/: simulate_backend.ipynb
backend/backend_simulation/simulated_backend/: docs_info.json  thread_ai_analyses.json  thread_data.json  workflow_settings.json
backend/backend_simulation/simulated_backend/generated_documents/: docs_info.json
backend/backend_simulation/simulated_backend/simulated_inbox/: thread_000.json  thread_001.json  thread_002.json  thread_003.json
backend/email_gen/: convert_threads_to_inbox.py  generate_emails.ipynb
backend/email_gen/generated_email_threads/: all_threads.json  thread_000.json  thread_001.json  thread_002.json  thread_003.json  thread_004.json
backend/email_gen/generated_email_threads_2/: all_threads.json  thread_000.json  thread_001.json  thread_002.json  thread_003.json  thread_004.json  thread_005.json  thread_006.json  thread_007.json  thread_008.json  thread_009.json
backend/simulated_inbox/: email_001.json  email_002.json  email_003.json  email_004.json  email_005.json  email_006.json  email_007.json  email_ai_analysis.json  email_data.json  workflow_settings.json  workflows_info.json
components/: Calendar.tsx  ChatPanel.tsx  DocsPage.tsx  EmailList.tsx  EmailPreview.tsx  EmailThread.tsx  MainContent.tsx  OpenedEmail.tsx  OpenedWorkflow.tsx  SenderPanel.tsx  Sidebar.tsx  TutorialDriver.tsx  (+4 more)
(+33 files in other folders)
